--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <div class="images">
     <h3>Fru Lorem</h3>
-    <img src="/loremGirl.jpg" alt="”En tjej kallas för lorem”," class="fruLorem" >
+    <img src="/images/loremGirl.jpg" alt="En tjej kallas för lorem" class="fruLorem" >
     <h3>Herr Lorem</h3>
-<img src="/Samuel-L.jpg" alt="”En kille som kallas för lorem”" class="herrLorem">
+<img src="/images/Samuel-L.jpg" alt="En kille som kallas för lorem" class="herrLorem">
 </div>
 
 </body>
